--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set cmake ver
       with:
         cmake-version: '3.19.x'
     - name: Install OS Deps
