--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,20 +20,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set cmake ver
+    - name: Setup cmake
+      uses: jwlawson/actions-setup-cmake@v1.9
       with:
-        cmake-version: '3.19.x'
+        cmake-version: '3.20.x'
+        
     - name: Install OS Deps
       run: sudo apt-get install build-essential libnuma-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+      with:
+        cmake-version: '3.19.x'
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
       
 
     - name: Build
       # Build your program with the given configuration
+      with:
+        cmake-version: '3.19.x'
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Test
